--- a/web/src/components/FoundersStory.astro
+++ b/web/src/components/FoundersStory.astro
@@ -47,7 +47,7 @@ const achievements = [
 	
 	<!-- Pattern Overlay -->
 	<div class="absolute inset-0 opacity-3">
-		<div class="absolute inset-0" style="background-image: url('data:image/svg+xml,%3Csvg width=\"60\" height=\"60\" viewBox=\"0 0 60 60\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cg fill=\"none\" fill-rule=\"evenodd\"%3E%3Cg fill=\"%23D4A857\" fill-opacity=\"0.1\"%3E%3Ccircle cx=\"7\" cy=\"7\" r=\"1\"/%3E%3Ccircle cx=\"53\" cy=\"7\" r=\"1\"/%3E%3Ccircle cx=\"30\" cy=\"7\" r=\"1\"/%3E%3Ccircle cx=\"7\" cy=\"30\" r=\"1\"/%3E%3Ccircle cx=\"53\" cy=\"30\" r=\"1\"/%3E%3Ccircle cx=\"30\" cy=\"30\" r=\"1\"/%3E%3Ccircle cx=\"7\" cy=\"53\" r=\"1\"/%3E%3Ccircle cx=\"53\" cy=\"53\" r=\"1\"/%3E%3Ccircle cx=\"30\" cy=\"53\" r=\"1\"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E'); background-repeat: repeat;"></div>
+		<div class="absolute inset-0" style="background-image: url('data:image/svg+xml,%3Csvg%20width=%2260%22%20height=%2260%22%20viewBox=%220%200%2060%2060%22%20xmlns=%22http://www.w3.org/2000/svg%22%3E%3Cg%20fill=%22none%22%20fill-rule=%22evenodd%22%3E%3Cg%20fill=%22%23D4A857%22%20fill-opacity=%220.1%22%3E%3Ccircle%20cx=%227%22%20cy=%227%22%20r=%221%22/%3E%3Ccircle%20cx=%2253%22%20cy=%227%22%20r=%221%22/%3E%3Ccircle%20cx=%2230%22%20cy=%227%22%20r=%221%22/%3E%3Ccircle%20cx=%227%22%20cy=%2230%22%20r=%221%22/%3E%3Ccircle%20cx=%2253%22%20cy=%2230%22%20r=%221%22/%3E%3Ccircle%20cx=%2230%22%20cy=%2230%22%20r=%221%22/%3E%3Ccircle%20cx=%227%22%20cy=%2253%22%20r=%221%22/%3E%3Ccircle%20cx=%2253%22%20cy=%2253%22%20r=%221%22/%3E%3Ccircle%20cx=%2230%22%20cy=%2253%22%20r=%221%22/%3E%3C/g%3E%3C/g%3E%3C/svg%3E'); background-repeat: repeat;"></div>
 	</div>
 	
 	<div class="container mx-auto px-4 relative z-10">
