--- a/web/src/pages/shop/[category].astro
+++ b/web/src/pages/shop/[category].astro
@@ -368,8 +368,8 @@ categories.forEach(cat => {
 
 	
 <!-- Products data from database API -->
-	<script define:vars={{ filteredProducts }}>
-		window.allProducts = filteredProducts;
+	<script>
+		window.allProducts = {JSON.stringify(filteredProducts)};
 	</script>
 
 	<script>
