--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -11,9 +11,37 @@ import OurValues from '../components/OurValues.astro';
 import Newsletter from '../components/Newsletter.astro';
 import Footer from '../components/Footer.astro';
 
+// SEO structured data for homepage
+const homepageSchema = {
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Ethnic Treasures",
+  "description": "Discover premium handcrafted Ethnic clothing at Ethnic Treasures. Shop our curated collection of sarees, kurtis, lehengas, and more, all crafted by skilled artisans using traditional techniques.",
+  "url": new URL('/', Astro.url.origin).href,
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": new URL('/search?q={search_term_string}', Astro.url.origin).href
+    },
+    "query-input": "required name=search_term_string"
+  },
+  "sameAs": [
+    "https://www.instagram.com/ethnic.treasures",
+    "https://www.facebook.com/EthnicTreasures",
+    "https://twitter.com/EthnicTreasures"
+  ]
+};
+
 ---
 
-<Layout title="Ethnic Treasures - Crafting Tradition, Weaving Stories" description="Discover premium handcrafted Ethnic clothing at Ethnic Treasures. Shop our curated collection of sarees, kurtis, lehengas, and more, all crafted by skilled artisans using traditional techniques.">
+<Layout 
+  title="Ethnic Treasures - Crafting Tradition, Weaving Stories" 
+  description="Discover premium handcrafted Ethnic clothing at Ethnic Treasures. Shop our curated collection of sarees, kurtis, lehengas, and more, all crafted by skilled artisans using traditional techniques."
+  keywords="ethnic wear, sarees, kurtis, lehengas, traditional clothing, handcrafted, artisan products, cultural fashion, ethnic treasures"
+  ogType="website"
+  structuredData={homepageSchema}
+>
 	<Header />
 	<Hero />
 	<CategoryGrid />
