--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -119,6 +119,15 @@
       opacity: 0;
     }
   }
+
+  @keyframes progress {
+    from {
+      width: 0%;
+    }
+    to {
+      width: 100%;
+    }
+  }
 }
 
 @layer utilities {
